# compllama

./: .gitignore  README.md
backend/: README.md  docker-compose.yaml  pyproject.toml  run.yaml
backend/data/: CaliforniaCityCACodeofOrdinancesEXPORT20220511.json  CaliforniaCityCACodeofOrdinancesEXPORT20220511.xlsx
backend/data/raw_files/: AventuraFLCodeofOrdinancesEXPORT20240913.xlsx  BartowFLCodeofOrdinancesEXPORT20241105.xlsx  BocaRatonFLCodeofOrdinancesEXPORT20240531.xlsx  BrisbaneCAMunicipalCodeEXPORT20240712.xlsx  CaliforniaCityCACodeofOrdinancesEXPORT20220511.xlsx  CoachellaCACodeofOrdinancesEXPORT20240917.xlsx  ColumbiaCountyFLCodeofOrdinancesEXPORT20240913.xlsx  DalyCityCACodeofOrdinancesEXPORT20240423 (1).xlsx  DalyCityCACodeofOrdinancesEXPORT20240423.xlsx  GreenvilleFLCodeofOrdinancesEXPORT20240708.xlsx  HialeahFLCodeofOrdinancesEXPORT20240802.xlsx  HighlandBeachFLCodeofOrdinancesEXPORT20240313.xlsx  HollisterCACodeofOrdinancesEXPORT20240506.xlsx  JacksonvilleFLCodeofOrdinancesEXPORT20241031.xlsx  LosAngelesCountyCACodeofOrdinancesEXPORT20240909 (1).xlsx  ModocCountyCACodeofOrdinancesEXPORT20241015.xlsx  MountainViewCACodeofOrdinancesEXPORT20241105.xlsx  OrlandoFLCodeofOrdinancesEXPORT20241017.xlsx  SanJoseCACodeofOrdinancesEXPORT20241014.xlsx  SantaBarbaraCountyCACodeofOrdinancesEXPORT20240712.xlsx
backend/src/: app.py  data_ingestion.py  db.py  embeddings.py  llama_stack.py  ordinance_db.py  parser.py  rag.py  services.py  test_rag.py  test_retrieval.py  utils.py
backend/src/workflows/: campbellca_parser.py  municode_parser.py  workflow.py
(+11 files in other folders)
